# data-rag-poc

./: Cargo.toml  README.md
src/: configuration.rs  embedder.rs  lib.rs  main.rs
src/song_data/: http_controller.rs  mod.rs  models.rs  query_song_data.rs  record_song_play.rs
supabase/: config.toml
supabase/migrations/: 20250130143914_initial.sql
tests/: consts.rs  ping_pong.rs  query_song_play.rs  record_song_play.rs
tests/framework/: mod.rs
